<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DeliveryTime">

    <Button
        android:id="@+id/payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:background="?android:attr/colorActivatedHighlight"
        android:text="Payment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:text="@string/choose_delivery_time"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="142dp"
        android:focusable="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radio_One"
                style="@android:style/Widget.Holo.Light.CompoundButton.RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="checkButton"
                android:text="07:00-08:00"
                tools:text="07:00-08:00" />

            <RadioButton
                android:id="@+id/radio_Two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_08_00_09_00"
                tools:text="08:00-09:00" />

            <RadioButton
                android:id="@+id/radio_Three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_09_00_10_00"
                tools:text="09:00-10:00" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radio_Four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_10_00_11_00"
                tools:text="10:00-11:00" />

            <RadioButton
                android:id="@+id/radio_Five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_11_00_12_00"
                tools:text="11:00-12:00" />

            <RadioButton
                android:id="@+id/radio_Six"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_12_00_13_00"
                tools:text="12:00-13:00" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radio_Seven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_13_00_14_00"
                tools:text="13:00-14:00" />

            <RadioButton
                android:id="@+id/radio_Eight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_14_00_15_00"
                tools:text="14:00-15:00" />

            <RadioButton
                android:id="@+id/radio_nine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_15_00_16_00"
                tools:text="15:00-16:00" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radio_Ten"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_16_00_17_00"
                tools:text="16:00-17:00" />

            <RadioButton
                android:id="@+id/radio_Eleven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_17_00_18_00"
                tools:text="17:00-18:00" />


            <RadioButton
                android:id="@+id/radio_1819"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_18_00_19_00"
                tools:text="18:00-19:00" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radio_1920"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_19_00_20_00"
                tools:text="19:00-20:00" />

            <RadioButton
                android:id="@+id/radio_2021"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_20_00_21_00"
                tools:text="20:00-21:00" />

            <RadioButton
                android:id="@+id/radio_2122"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_21_00_22_00"
                tools:text="21:00-22:00" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <RadioButton
                android:id="@+id/radio_2223"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_22_00_23_00"
                tools:text="22:00-23:00" />

            <RadioButton
                android:id="@+id/radio_2324"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/_23_00_24_00"
                tools:text="23:00-24:00" />

        </LinearLayout>


    </RadioGroup>

    <TextView
        android:id="@+id/text_view_selected"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/buttontest2"
        android:layout_marginBottom="282dp"
        android:text="@string/Please_confirm_time"
        android:textColor="@android:color/black"
        tools:text="Please confirm Selection"
        android:layout_alignLeft="@+id/buttontest2" />

    <Button
        android:id="@+id/buttontest2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="204dp"
        android:fadeScrollbars="false"
        android:text="@string/confirm_selection"
        tools:ignore="RelativeOverlap" />


</RelativeLayout>